<resources>
    <string name="app_name">Pomodoro Timer</string>
    <string name="mode_work">Mode: Work</string>
    <string name="mode_break">Mode: Break</string>
    <string name="default_timer">25:00</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="apply">Apply</string>
    <string name="label_work">Work (min):</string>
    <string name="label_break">Break (min):</string>
    <string name="hint_work_minutes">Work minutes</string>
    <string name="hint_break_minutes">Break minutes</string>
    <string name="default_work_minutes">25</string>
    <string name="default_break_minutes">5</string>
    <string name="settings">Settings</string>
    <string name="sessions_label">Sessions: %1$d</string>
    <string name="back">Back</string>
    <string name="confirm_exit_title">Confirm exit</string>
    <string name="confirm_exit_message">Are you sure you want to exit? This will reset sessions to 1.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>